Attempting to solve layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ html {
   scroll-behavior: smooth;
 }
 
+.section{
+  width: 100%;
+}
+
 .options {
   display: flex;
   flex-wrap: nowrap;
